--- a/build.gradle
+++ b/build.gradle
@@ -71,7 +71,8 @@ project(":android") {
         natives "com.badlogicgames.gdx:gdx-freetype-platform:$gdxVersion:natives-arm64-v8a"
         natives "com.badlogicgames.gdx:gdx-freetype-platform:$gdxVersion:natives-x86"
         natives "com.badlogicgames.gdx:gdx-freetype-platform:$gdxVersion:natives-x86_64"
-        compile 'com.google.android.gms:play-services-ads:10.2.4'
+        implementation 'com.google.android.gms:play-services-ads:10.2.4'
+
         
     }
 }
